Update GitHub Actions workflow to improve deployment process. Added conditional checks for the build directory and package-lock.json, ensuring robust handling of dependencies and directory existence. Enhanced permissions for deployments.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,7 @@ permissions:
   contents: read
   pages: write
   id-token: write
+  deployments: write
 
 concurrency:
   group: "pages"
@@ -30,15 +31,22 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: will-you-be-my-valentine/package-lock.json
       
       - name: Build Valentine Game
         run: |
-          cd will-you-be-my-valentine
-          npm ci
-          npm run build
-          cp -r dist/* ../projects/valentine-game/
+          if [ -d "will-you-be-my-valentine" ]; then
+            cd will-you-be-my-valentine
+            if [ -f "package-lock.json" ]; then
+              npm ci || npm install
+            else
+              npm install
+            fi
+            npm run build
+            mkdir -p ../projects/valentine-game
+            cp -r dist/* ../projects/valentine-game/
+          else
+            echo "will-you-be-my-valentine directory not found, skipping build"
+          fi
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
